--- a/currency-tracker/src/App.css
+++ b/currency-tracker/src/App.css
@@ -5,52 +5,72 @@
   text-align: center;
 }
 
-.nav input{
-    width: 500px;
-    height: 50px;
-       font-size: 25px;
-         margin-right: 10px;
-      border-radius: 10px;
-    
+.nav input {
+  width: 500px;
+  height: 50px;
+  font-size: 25px;
+  margin-right: 10px;
+  border-radius: 10px;
 }
 .nav {
-    position: relative;
+  position: relative;
 }
 
-
-.nav .search-icon{
+.nav .search-icon {
   position: absolute;
   margin-left: -48px;
   margin-top: 14px;
   font-size: 27px;
 }
 
-.countries{ 
-  
-    width: 80%;
-    margin: auto;
-    margin-top: 6%;
-      display: grid;
-      grid-template-columns: repeat(3,1fr);
-      gap: 30px;
+.countries {
+  width: 80%;
+  margin: auto;
+  margin-top: 6%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
 
-.countries-card{
+.countries-card {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  
 }
 
-  .countries-card > div{
-      height: 50%;
-  }
+.countries-card > div {
+  height: 50%;
+}
 
-  .countries-card > div :hover{
+.countries-card > div :hover {
   transform: scale(1.1);
   overflow: hidden;
   position: relative;
-  }
-.countries-card img{
+  cursor: pointer;
+}
+.countries-card img {
   transition: transform 0.5s ease;
-     width: 100%;
-     height: 100%;
+  width: 100%;
+  cursor: pointer;
+  height: 100%;
+}
+
+.pagination {
+ 
+  padding: 10px;
+  margin: 35px 0;
+  justify-content: center;
+}
+
+
+.pagination > span {
+     padding: 15px 15px ;
+       border: 1px solid gray;
+       cursor: pointer;
+}
+
+
+.pagination_selected{
+  background-color: rgba(178, 177, 177, 0.854);
+}
+.pagination__disable{
+    opacity: 0;
 }
