--- a/currency-tracker/src/App.css
+++ b/currency-tracker/src/App.css
@@ -34,14 +34,16 @@
 
 .countries-card {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  overflow: hidden;
 }
 
 .countries-card > div {
   height: 50%;
+    padding: 10px;
 }
 
 .countries-card > div :hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
   overflow: hidden;
   position: relative;
   cursor: pointer;
@@ -63,7 +65,7 @@
 
 .pagination > span {
      padding: 15px 15px ;
-       /* border: 1px solid gray; */
+      
        cursor: pointer;
 }
 
