--- a/currency-tracker/src/App.css
+++ b/currency-tracker/src/App.css
@@ -142,7 +142,8 @@
   border: 10px solid #ccc;
   width: 50px;
   border-radius: 50%;
-
+  margin:19px auto;
+  align-items: center;
   height: 50px;
   border-top-color: #007bff;
   animation: spin 1s linear infinite;
